[package]
name = "webPlay"
version = "1.0.0"
edition = "2024"

 
[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1"
local-ip-address = "0.6"
clap = { version = "4.0", features = ["derive"] }